Lsp/lsp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eclipsejdtls-ingress
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: http-01-production
spec:
  ingressClassName: nginx
  rules:
    - host: lsp.icoder.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eclipsejdtls-service
                port:
                  number: 30003
  tls:
    - hosts:
        - lsp.icoder.vn
      secretName: lsp-icoder-vn
